@@ -2,18 +2,21 @@ package com.agent.springbootrag.langgraph.graph;
 
 import com.agent.springbootrag.langgraph.state.ChatState;
 import com.agent.springbootrag.langgraph.tool.WeatherTools;
+import com.agent.springbootrag.rag.service.ChatService;
 import org.bsc.langgraph4j.StateGraph;
 import org.bsc.langgraph4j.spring.ai.agentexecutor.AgentExecutor;
-import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.messages.SystemMessage;
 import org.springframework.ai.chat.messages.UserMessage;
 import org.springframework.ai.chat.model.ChatModel;
 import org.springframework.ai.support.ToolCallbacks;
 import org.springframework.ai.tool.ToolCallback;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
 import static org.bsc.langgraph4j.GraphDefinition.END;
@@ -23,18 +26,20 @@ import static org.bsc.langgraph4j.action.AsyncNodeAction.node_async;
 /**
  * 定义 Graph 工作流
  */
-@Component
+@Component("chatGraphBuilder")
 public class ChatGraph {
+
+    @Autowired
+    private ChatService chatService;
 
     /**
      * 构建 ChatGraph 工作流
      *
      * @param chatModel  ChatModel 实例
-     * @param chatClient ChatClient 实例
      * @return StateGraph<ChatState> 实例
      * @throws Exception 异常
      */
-    public StateGraph<ChatState> build(ChatModel chatModel, ChatClient chatClient) throws Exception {
+    public StateGraph<ChatState> build(ChatModel chatModel) throws Exception {
         // 定义工具列表
         List<ToolCallback> tools = Arrays.asList(ToolCallbacks.from(new WeatherTools()));
         // 创建状态图，使用 ChatState::new 初始化 Graph State
@@ -59,9 +64,10 @@ public class ChatGraph {
                     )
             );
             // 获取 Agent 最终回答
-            String answer = outputs.stream()
-                    .toList()
-                    .getLast()
+            var outputList = outputs.stream().toList();
+
+            String answer = outputList
+                    .get(outputList.size() - 1)
                     .state()
                     .lastMessage()
                     .map(Object::toString)
@@ -77,29 +83,27 @@ public class ChatGraph {
         // =========================
         graph.addNode("classify", node_async(state -> {
             String question = state.question();
-            String intent = chatClient
-                    .prompt()
-                    .system("""
-                            判断用户问题属于哪一类：
+            String intent = chatModel.call(
+                    new SystemMessage("""
+                    判断用户问题属于哪一类：
                                                 
-                            NORMAL
-                            RAG
-                            AGENT
-                        
-                            NORMAL：
-                            普通闲聊、简单问答。
-                        
-                            RAG：
-                            需要查询知识库才能回答的问题。
-                        
-                            AGENT：
-                            需要调用工具或者执行任务的问题。
-                        
-                            只输出 NORMAL、RAG 或 AGENT。
-                            """)
-                    .user(question)
-                    .call()
-                    .content();
+                    NORMAL
+                    RAG
+                    AGENT
+                
+                    NORMAL：
+                    普通闲聊、简单问答。
+                
+                    RAG：
+                    需要查询知识库才能回答的问题。
+                
+                    AGENT：
+                    需要调用工具或者执行任务的问题。
+                
+                    只输出 NORMAL、RAG 或 AGENT。
+                    """),
+                    new UserMessage(question)
+            );
             intent = intent == null ? "" : intent.trim().toUpperCase();
             intent = switch (intent) {
                 case "RAG" -> "RAG";
@@ -118,15 +122,13 @@ public class ChatGraph {
         // =========================
         graph.addNode("answer", node_async(state -> {
             String question = state.question();
-            String answer = chatClient
-                    .prompt()
-                    .system("""
-                            你是一个专业 AI 助手。
-                            请根据用户问题回答。
-                            """)
-                    .user(question)
-                    .call()
-                    .content();
+            String answer = chatModel.call(
+                    new SystemMessage("""
+                    你是一个专业 AI 助手。
+                    请根据用户问题回答。
+                    """),
+                    new UserMessage(question)
+            );
             return Map.of(
                     ChatState.ANSWER,
                     answer
@@ -137,14 +139,12 @@ public class ChatGraph {
         // RAG
         // =========================
         graph.addNode("rag", node_async(state -> {
-
             String question = state.question();
-
-            // TODO:
-
+            String answer = chatService
+                    .ask(question, UUID.randomUUID().toString());
             return Map.of(
                     ChatState.ANSWER,
-                    "这里是从 Milvus + Neo4j 获取的知识"
+                    answer
             );
         }));
 
